<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_background"
    tools:context=".screen.VideoGameInfoFragment"
    tools:ignore="ScrollViewCount">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/video_game_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <ImageView
                android:id="@+id/background_image"
                android:layout_width="match_parent"
                android:layout_height="252dp"
                android:adjustViewBounds="true"
                android:src="@drawable/video_game_background_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/video_game_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/background_image" />

            <TextView
                android:id="@+id/description_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/video_game_description_name"
                android:textColor="@color/secondary_background"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/video_game_description"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_name" />

            <TextView
                android:id="@+id/trailer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/trailer_name"
                android:textColor="@color/secondary_background"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trailer_name"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/developer_team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/developer_team"
                android:textColor="@color/secondary_background"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trailers" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/developer_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/developer_team_name"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/screenshots_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/screenshots_name"
                android:textColor="@color/secondary_background"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/developer_team" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/screenshots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/screenshots_name"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/achievement_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/achievement_name"
                android:textColor="@color/secondary_background"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/screenshots" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/achievements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/achievement_name"
                tools:ignore="MissingConstraints" />

            <com.github.siyamed.shapeimageview.RoundedImageView
                android:id="@+id/reddit_logo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:src="@drawable/reddit_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/achievements"
                app:siRadius="90dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/reddit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/reddit"
                android:textColor="@color/secondary_background"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/reddit_logo"
                app:layout_constraintStart_toEndOf="@id/reddit_logo"
                app:layout_constraintTop_toTopOf="@+id/reddit_logo" />

            <TextView
                android:id="@+id/reddit_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/reddit_name"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reddit_logo" />

            <TextView
                android:id="@+id/reddit_description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/reddit_description"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reddit_name" />

            <TextView
                android:id="@+id/reddit_url"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/reddit_url"
                android:textColor="@color/white"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reddit_description" />

            <com.github.siyamed.shapeimageview.RoundedImageView
                android:id="@+id/metacritic_logo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:src="@drawable/metacritic_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reddit_url"
                app:siRadius="90dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/metacritic_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/metacritic"
                android:textColor="@color/secondary_background"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/metacritic_logo"
                app:layout_constraintStart_toEndOf="@id/metacritic_logo"
                app:layout_constraintTop_toTopOf="@+id/metacritic_logo" />

            <TextView
                android:id="@+id/metacritic_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/metacritic_url"
                android:textColor="@color/white"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/metacritic_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/response_video_game_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:progress="1"
                android:indeterminateTint="@color/secondary_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/message"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/progress_bar"
                app:layout_constraintTop_toBottomOf="@+id/progress_bar"
                app:layout_constraintEnd_toEndOf="@+id/progress_bar"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</ScrollView>