<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/card_shape"
    android:layout_margin="5dp">

    <com.github.siyamed.shapeimageview.RoundedImageView
        android:id="@+id/photo_developer_team"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:siRadius="15dp"
        android:layout_marginEnd="5dp"
        android:src="@drawable/photo_developer_team"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/developer_team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/developer_team_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/photo_developer_team"/>

    <TextView
        android:id="@+id/developer_team_positions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/developer_team_positions"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/developer_team_name"
        app:layout_constraintStart_toStartOf="@+id/developer_team_name"
        app:layout_constraintTop_toBottomOf="@+id/developer_team_name"/>

    <TextView
        android:id="@+id/developer_team_game_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/developer_team_game_count"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>