<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary_background"
    tools:context=".screens.videoPlayer.VideoPlayerFragment">

    <com.google.android.exoplayer2.ui.StyledPlayerView
        android:id="@+id/video_player"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/trailer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/trailer_title"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_player"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/video_game_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trailer_title">

        <com.github.siyamed.shapeimageview.RoundedImageView
            android:id="@+id/video_game_image"
            android:layout_width="200dp"
            android:layout_height="128dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/video_game_background_image"
            app:siRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/video_game_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/video_game_name"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/video_game_image"
            app:layout_constraintTop_toTopOf="@+id/video_game_image"/>

        <TextView
            android:id="@+id/video_game_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/video_game_description"
            android:textColor="@color/white"
            android:lines="5"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="@+id/video_game_title"
            app:layout_constraintTop_toBottomOf="@+id/video_game_title"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trailers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_game_info"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>